Closed
Bug 781394
Opened 13 years ago
Closed 13 years ago
Firefox displays "Install Missing Plugins" popup for nytimes.com home page
Categories
(Core Graveyard :: Plug-ins, defect)
Tracking
(firefox16 unaffected, firefox17+ verified)
VERIFIED
FIXED
mozilla17
| Tracking | Status | |
|---|---|---|
| firefox16 | --- | unaffected |
| firefox17 | + | verified |
People
(Reporter: cpeterson, Assigned: johns)
References
()
Details
(Keywords: regression)
Attachments
(2 files, 1 obsolete file)
Firefox displays the "Install Missing Plugins" popup for some (but not all) nytimes.com pages. I have Flash 11.3, Silverlight, QuickTime, and Java plugins installed and enabled.
I bisected older Nightly 17 builds and I believe the regression point is today's build 8-08. Here is the pushlog of changes between build 8-07 and 8-08:
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=1bbc0b65dffb&tochange=e55638d4037a
I have seen this problem on the following pages:
http://www.nytimes.com/
http://fivethirtyeight.blogs.nytimes.com/2012/08/08/how-romneys-pick-of-a-running-mate-could-sway-the-outcome/
Updated•13 years ago
|
| Assignee | ||
Comment 1•13 years ago
|
||
It looks like we're firing a plugin load error when we did not previously possibly due to something the site's js is doing - investigating
Comment 2•13 years ago
|
||
Confirmed.
http://www.yahoo.co.jp/ when loads ad.
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:17.0) Gecko/17.0 Firefox/17.0 ID:20120808030529
OS: Mac OS X → All
| Reporter | ||
Comment 3•13 years ago
|
||
jschoenick, bisecting mozilla-inbound's archived tinderbox builds, I have narrowed the regression range to your nsObjectLoadingContent changes:
https://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=b4a63a0b90c2&tochange=f3bd764deb31
Comment 4•13 years ago
|
||
Is this the same bug that prompts to install missing plugins on Amazon's product pages[1]?
1| http://www.amazon.com/gp/product/B005HH0N3U/
Comment 5•13 years ago
|
||
The bug is on all platforms not just Mac OS X. I am using firefox 64bit with windows 8 and get the plugin is missing also on windows 7 too.
| Assignee | ||
Updated•13 years ago
|
Status: NEW → ASSIGNED
OS: Mac OS X → All
Hardware: x86 → All
Comment 7•13 years ago
|
||
Bug 781681 has a reduced testcase.
Comment 8•13 years ago
|
||
(In reply to alex_mayorga from comment #4)
Per
// pre-fetching css and js assets based on different browser types
...
else if (isFireFox) {
for (var i=0; i<jsCssAssets.length; i++) {
var o = document.createElement("object");
o.data = jsCssAssets[i];
o.width = o.height = 0;
document.body.appendChild(o);
}
I'd would think so, no?
If it's of any interest, the problem also occurs on my little website.
e.g. http://edu-net.net/media/talkin2me/
Comment 10•13 years ago
|
||
Complement to my comment.
-> http://forums.mozillazine.org/viewtopic.php?f=23&t=2513405
Comment 12•13 years ago
|
||
Also affecting most articles on news.bbc.co.uk
Comment 13•13 years ago
|
||
I'm seeing it on most sites with embedded flash videos.
Comment 14•13 years ago
|
||
Looks like if a data attribute isn't specified (until it gets added later with javascript), we'll fire the missing plugin event (and then load the plugin later anyway).
Updated•13 years ago
|
Attachment #651838 -
Attachment mime type: text/plain → text/html
| Assignee | ||
Comment 15•13 years ago
|
||
Attachment #651842 -
Flags: review?(joshmoz)
| Assignee | ||
Comment 16•13 years ago
|
||
(In reply to David Keeler from comment #14)
> Created attachment 651838 [details]
> another reduced test case
>
> Looks like if a data attribute isn't specified (until it gets added later
> with javascript), we'll fire the missing plugin event (and then load the
> plugin later anyway).
Previously we wont only fire the plugin error if we loaded a channel and still had no type, but wouldn't for e.g.
> <object type="application/x-derp">
> <param name="foo" value="bar">
> </object>
745030 made this logic saner, and all objects with an ultimately unknown type will trigger an error. This patch will fix us firing errors for objects with no type, but I'm not sure if we want to completely revert to our old broken behavior.
| Assignee | ||
Comment 17•13 years ago
|
||
nit, use IsEmpty() instead of checking Length()
Attachment #651842 -
Attachment is obsolete: true
Attachment #651842 -
Flags: review?(joshmoz)
Attachment #651843 -
Flags: review?(joshmoz)
Attachment #651843 -
Flags: review?(joshmoz) → review+
| Assignee | ||
Comment 18•13 years ago
|
||
Comment on attachment 651843 [details] [diff] [review]
Don't fire plugin errors for plugins that never got to a determined type
https://hg.mozilla.org/integration/mozilla-inbound/rev/8973d9714190
try run:
https://tbpl.mozilla.org/?tree=Try&rev=1e72e421e6b8
Attachment #651843 -
Flags: checkin+
| Assignee | ||
Comment 19•13 years ago
|
||
Leaving open as it's not clear this will solve all the problems
Whiteboard: [leave open]
Updated•13 years ago
|
Comment 20•13 years ago
|
||
| Assignee | ||
Comment 21•13 years ago
|
||
I believe this is fixed now, looking at this further it seems that Bug 767631 prevents us from triggering this in other cases that websites might not expect, as we only really trigger loads on BindToTree and SetAttr(data)
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Keywords: qawanted
Resolution: --- → FIXED
Whiteboard: [leave open]
| Assignee | ||
Comment 22•13 years ago
|
||
QA - We should be on the lookout for sites displaying this popup in FF17 that did not previously (though many of these cases may be evangelism issues, as our old behavior was not very correct)
Comment 23•13 years ago
|
||
Sorry for the "amateurish" post.
1. In the last few days the little "robot" figure in the error message disappeared.
Please see -> http://edu-net.net/images/plugin-error.jpg
2. I assume the fix will be in tomorrow's build because I've just (midnight, Berlin time) updated to Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:17.0) Gecko/17.0 Firefox/17.0 ID:20120820030522 CSet: c676b554c7bb
and the bug is still present.
3. I have a very simple, primitively coded personal site that I use for my English classes at the Technical University here in Berlin, Germany. For some reason, it, too, throws up the "plugin needed" error. Please see the page I mentioned above in comment 10.
e.g. http://edu-net.net/media/talkin2me/
Thanks.
| Assignee | ||
Comment 24•13 years ago
|
||
(In reply to Joe Greenman from comment #23)
> Sorry for the "amateurish" post.
>
> 1. In the last few days the little "robot" figure in the error message
> disappeared.
> Please see -> http://edu-net.net/images/plugin-error.jpg
Does this happen with addons disabled? (Help -> restart with addons disabled)
If so, please file a new bug for this
> 2. I assume the fix will be in tomorrow's build because I've just (midnight,
> Berlin time) updated to Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:17.0)
> Gecko/17.0 Firefox/17.0 ID:20120820030522 CSet: c676b554c7bb
> and the bug is still present.
This build should have the fix - what sites are you still seeing this error on?
> 3. I have a very simple, primitively coded personal site that I use for my
> English classes at the Technical University here in Berlin, Germany. For
> some reason, it, too, throws up the "plugin needed" error. Please see the
> page I mentioned above in comment 10.
> e.g. http://edu-net.net/media/talkin2me/
>
> Thanks.
I think this is because you have an extra <embed> tag on this page that is causing the error, before the object tag:
> <embed> <!-- ~ Delete this -->
> <object ...>
> <param name='movie' value='http://edu-net.net/media/talkin2me/player.swf'>
> ...
> <embed
> type='application/x-shockwave-flash'
> ...
> />
> </object>
Comment 25•13 years ago
|
||
(In reply to John Schoenick [:johns] from comment #24)
>...
> > 1. In the last few days the little "robot" figure in the error message
> > disappeared.
> > Please see -> http://edu-net.net/images/plugin-error.jpg
>
> Does this happen with addons disabled? (Help -> restart with addons disabled)
> If so, please file a new bug for this
I tried it. There's an image, but it looks like a "lego" block rather than the little robot. I suppose the robot had something to do with my setup.
> > 2. I assume the fix will be in tomorrow's build because I've just (midnight,
> > Berlin time) updated to Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:17.0)
> > Gecko/17.0 Firefox/17.0 ID:20120820030522 CSet: c676b554c7bb
> > and the bug is still present.
>
> This build should have the fix - what sites are you still seeing this error
> on?
I had only checked on my own site, and with the fix for my lousy coding that you kindly provided, it's now fixed. Thank you very much.
>
> I think this is because you have an extra <embed> tag on this page that is
> causing the error, before the object tag:
Yes, that was the problem. Again, thanks very much.
I've fixed some of the pages and hope to get through the rest of them tomorrow.
My most since thanks.
Comment 26•13 years ago
|
||
I meant "sincere" thanks.
| Assignee | ||
Comment 27•13 years ago
|
||
(In reply to Joe Greenman from comment #25)
> > I think this is because you have an extra <embed> tag on this page that is
> > causing the error, before the object tag:
>
> Yes, that was the problem. Again, thanks very much.
Thinking about this more, I think it is a bug that <embed> tags without any type or URI trigger an error frame - I opened bug 784185 for that
Updated•13 years ago
|
Comment 28•13 years ago
|
||
Replacing QAWANTED with VERIFYME. To whomever tests this, please confirm the URLs in this bug don't trigger this bug anymore. However, also keep an eye out for other websites which may potentially trigger this bug. We'll want to be as broad in our testing as possible to try to tickle some edge-cases.
Comment 29•13 years ago
|
||
I can confirm that the "Install Missing Plugins" popup no longer appears on Mozilla/5.0 (Windows NT 6.1; Win64; x64; rv:18.0) Gecko/18.0 Firefox/18.0 ID:20120830030531 for the following pages:
http://www.nytimes.com/
http://fivethirtyeight.blogs.nytimes.com/2012/08/08/how-romneys-pick-of-a-running-mate-could-sway-the-outcome/
http://www.yahoo.co.jp/
http://edu-net.net/media/talkin2me/
http://www.amazon.com/gp/product/B005HH0N3U/
Status: RESOLVED → VERIFIED
Comment 30•13 years ago
|
||
Thanks Alex. Can you please also confirm with the latest Firefox 17.0a2 Aurora build?
Comment 31•13 years ago
|
||
It's not fixed on http://edu-net.net/media/talkin2me/ in 17.02a
Comment 32•13 years ago
|
||
(In reply to Joe Greenman from comment #31)
> It's not fixed on http://edu-net.net/media/talkin2me/ in 17.02a
Thanks Joe. I can confirm that Firefox 18.0a1 Nightly 2012-08-30 does not reproduce but Firefox 17.0a2 Aurora 2012-08-30 does. Reopening this as it seems to not be a complete fix. Feel free to close and request a new dependency bug.
Status: VERIFIED → REOPENED
Resolution: FIXED → ---
Comment 33•13 years ago
|
||
Sorry, I meant 17.0a2. I also apologize for not being more specific.
To elucidate, I checked it on today's Aurora (30Aug12) zip version. I checked it both with an absolutely clean profile with no extensions and with my normal profile, that includes FlashBlock.
In both cases it requested a plugin.
However, there was not, as in the past, a message bar that could be clicked to look (in vain) for the missing plugin.
Comment 34•13 years ago
|
||
Sorry, I meant 17.0a2. I also apologize for not being more specific.
To elucidate, I checked it on today's Aurora (30Aug12) zip version. I checked it both with an absolutely clean profile with no extensions and with my normal profile, that includes FlashBlock.
In both cases it requested a plugin.
However, there was not, as in the past, a message bar that could be clicked to look (in vain) for the missing plugin.
| Assignee | ||
Comment 35•13 years ago
|
||
The issue with the extra embed frame on that page is bug 784185, which is separate from this bug. That bug was not yet backported to 17, hence the continuing issue there.
This bug is for the message-bar popup for empty plugin tags, which does appear to be fixed in 17 and 18 as you note
Status: REOPENED → RESOLVED
Closed: 13 years ago → 13 years ago
Resolution: --- → FIXED
Comment 36•13 years ago
|
||
Thanks for the clarification John. Remarking this verified though we'll keep an eye out for issues like this through the QA cycle for Firefox 17.
Comment 37•13 years ago
|
||
Note that I've added the verifyme keyword to bug 784185 to make sure we test that as well.
Updated•3 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•