Bug 781394 - Don't fire plugin errors for plugins that never got to a determined type. r=josh